		Updating OpenBSD/landisk instructions: 4.7 -> 4.8.
20110606	Updating the documentation on how to start Dreamcast binaries,
		and updating from NetBSD/dreamcast 5.0.1 to 5.1.
20110609	Adding automagic guessing of Dreamcast ISO filesystem offset,
		so that Linux/dreamcast can be booted without specifying the
		offset.
		Booting Dreamcast via bootblock now uses software PROM starting
		point instead of calling a particular bootblock address, making
		it possible to run a complete boot sequence in more cases.
		When unimplemented SuperH instructions cause an abort failure,
		GXemul now drops into the debugger instead of calling exit()
		(if started with -K).
20110610	In SH4 instruction trace, include address in printout in a few
		more cases than before.
		Make NetBSD/dreamcast etc. boot correctly with 480 pixels in
		the y direction (random read hack from PDTRA).
		Use the 8x16 font as a fake Dreamcast ROM font.
		Adding fake/skeleton Dreamcast ROM SYSINFO_INIT, SYSINFO_ID,
		FLASHROM_INIT, and FLASHROM_READ calls.
20110616	Adding Dreamcast devices as symbols, so that runtime debugging
		will show meaningful names instead of just addresses, when
		reading and writing device registers.
20110621	Adding "trace" versions of SuperH bsr and bsrf_rn instructions.
		Adding the first SuperH instruction combination for speeding
		up a variable read loop (bt_samepage_wait_for_variable).
20110622	Continuing on Dreamcast and SuperH emulation: the SH4 DMA
		channel numbers were off-by-one (but didn't really have any
		negative effect). Experimenting with end-of-DMA mechanism in
		dev_pvr. Adding a second device thing at 0x005f7c00, which
		seems to be a PVR DMA register range, but not much used?
20110623	Found a bug in the SH4 fsca instruction: the angle argument for
		sin and cos was incorrectly calculated. "dcfighting.bin" and
		"gltest.bin" (two "homebrew" Dreamcast programs) now look much
		more like on the real Dreamcast.