@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2006-2009  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2006-2011  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -45,7 +45,7 @@
 
 
 #ifdef UNSTABLE_DEVEL
-#define debug fatal
+// #define debug fatal
 #endif
 
 #define	NREGS		(0x100/sizeof(uint32_t))
@@ -179,6 +179,12 @@ DEVICE_ACCESS(dreamcast_g2_extdma)
 		if (writeflag == MEM_WRITE) {
 			debug("[ dreamcast_g2_extdma: write to channel %i:"
 			    " STATUS = 0x%08x ]\n", channel, (int) idata);
+			if (idata != 0) {
+				fatal("[ dreamcast_g2_extdma: write to channel %i:"
+				    " STATUS = 0x%08x: TODO (start transfer?) ]\n",
+				    channel, (int) idata);
+				exit(1);
+			}
 		}
 		break;
 
